--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,11 @@ dependencies {
     implementation libs.guava
     implementation 'org.apache.poi:poi-ooxml:5.3.0'
     implementation 'io.github.sashirestela:simple-openai:3.22.2'
-
-      
+    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
 }
+    
+
 
 testing {
     suites {
